# firmware

./: .gitignore  .gitmodules  CMakeLists.txt  memmap_custom.ld
.github/workflows/: cmake.yml
database/: CMakeLists.txt  db_obj_builder.cmake  get_and_parse_hdldb.py  parse_db.py
ext/: CMakeLists.txt
ps2boot/: CMakeLists.txt
src/: bigmem.c  bigmem.h  blit16.h  cardman.c  cardman.h  config.h  debug.c  debug.h  des.c  dirty.c  dirty.h  flashmap.h  gui.c  gui.h  input.c  input.h  keys.h  keystore.c  keystore.h  lv_conf.h  main.c  memory_card.c  memory_card.h  memory_card.in.c  oled.c  oled.h  pio_spi.c  pio_spi.h  psram.c  psram.h  psx_spi.pio  sd.c  sd.h  sd_hw_config.c  settings.c  settings.h  spi.pio  tonyhax.c  ui_menu.c  ui_menu.h  (+4 more)
src/arduino_wrapper/: Arduino.h  SPI.h  sd.cpp
src/game_names/: CMakelists.txt  game_names.c  game_names.h
src/ps1/: CMakeLists.txt  ps1_cardman.c  ps1_cardman.h  ps1_dirty.c  ps1_dirty.h  ps1_empty_card.c  ps1_empty_card.h  ps1_mc_spi.pio  ps1_memory_card.c  ps1_memory_card.h  ps1_odeman.c  ps1_odeman.h
src/ps2/: CMakeLists.txt  ps2_cardman.c  ps2_cardman.h  ps2_dirty.c  ps2_dirty.h  ps2_exploit.c  ps2_exploit.h  ps2_memory_card.c  ps2_memory_card.h  ps2_memory_card.in.c  ps2_pio_qspi.c  ps2_pio_qspi.h  ps2_psram.c  ps2_psram.h  ps2_qspi.pio
src/ps2/card_emu/: ps2_mc_auth.c  ps2_mc_auth.h  ps2_mc_commands.c  ps2_mc_commands.h  ps2_mc_internal.h  ps2_mc_spi.pio  ps2_memory_card.c  ps2_memory_card.h  ps2_memory_card.in.c  ps2_sd2psxman.c  ps2_sd2psxman.h  ps2_sd2psxman_commands.c  ps2_sd2psxman_commands.h
src/version/: CMakeLists.txt  script.cmake  version.h
src/version/template/: version.c
src/wear_leveling/: wear_leveling.h  wear_leveling_internal.h  wear_leveling_rp2040_flash.c  wear_leveling_rp2040_flash_config.h
template/: version.c
